# HEPHAESTUS

./: .gitattributes  .gitignore  README.md  backup_eval_log.txt  check_board.py  crop_all_components.py  phase_5_6_test_runner.py  pyproject.toml  show_extraction_summary.py  verify_phase_5_6_invariants.py
docs/: evaluation_phase_5_5.md  evaluation_phase_5_6.md  phase_10_order_G10_evidence.md  phase_5_6_colorspace_hardening.md  phase_9_cli_contract.md  phase_9_order_E3_evidence.md  phase_9_order_E_evidence.md  phase_9_order_G2_evidence.md  phase_9_order_G4_evidence.md  phase_9_order_G5_evidence.md  phase_9_order_G6_evidence.md  phase_9_order_G7_baseline.md  phase_9_order_G_evidence.md  phase_9_orders_A_D_complete.md  phase_9_step_2_complete.md  phase_9_step_2_validation.md
eval/: debug_log.txt
scripts/: audit_misses.py  evaluate_mobius_recall.py  generate_miss_packet.py  validate_invariants.py
test_output/: g7_baseline_eval.json  g7_tuned_eval.json  g7_tuned_eval_1to1.json  g8_hungarian_eval.json  manifest.json
test_phase_6_2/: extraction_log.jsonl  manifest.json  page_text.jsonl
test_phase_6_2_dune/: extraction_log.jsonl  manifest.json  page_text.jsonl
test_phase_6_2_fixed/: extraction_log.jsonl  manifest.json  page_text.jsonl
tests/: conftest.py  test_classifier_heuristics.py  test_classifier_model.py  test_cli.py  test_config.py  test_dedup_cluster.py  test_dedup_distance.py  test_dedup_hash.py  test_dedup_integration.py  test_image_extraction.py  test_manifest.py  test_metadata_annotation.py  test_output_packaging.py  test_pdf_ingestion.py  (+4 more)
(+82 files in other folders)
